<resources>
    <string name="app_name">SupportHealth</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Главная</string>
    <string name="activity">Активность</string>
    <string name="nutrition">Питание</string>
    <string name="profile">Профиль</string>
    <string name="stress">Настроение</string>
    <string name="calories">Калории</string>
    <string name="protein">Белки</string>
    <string name="fat">Жиры</string>
    <string name="carbohydrates">Углеводы</string>
    <string name="eating">Прием пищи</string>
    <string name="recommended">Рекомендовано:</string>
    <string name="water_balance">Водный баланс</string>
    <string name="water">Вода</string>
    <string name="target">Цель</string>
    <string name="target_nutrition">Цель питания</string>
    <string name="target_steps">Цель активности</string>
    <string name="product_search">Поиск продукта</string>
    <string name="recent">Недавние</string>
    <string name="favorites">Избранные</string>
    <string name="default_grams">100</string>
    <string name="grams">г</string>
    <string name="nutritional_value">Пищевая ценность</string>
    <string name="add">Добавить</string>
    <string name="search">Поиск</string>
    <string name="product">Продукт</string>
    <string name="breakfast">Завтрак</string>
    <string name="dinner">Ужин</string>
    <string name="lunch">Обед</string>
    <string name="afternoon_tea">Полдник</string>
    <string name="personal">Личное</string>
    <string name="communications">Коммуникации</string>
    <string name="settings">Настройки</string>
    <string name="my_details">Мои данные</string>
    <string name="devices">Устройства</string>
    <string name="support">Поддержка</string>
    <string name="about_the_application">О приложении</string>
    <string name="safety">Безопасность</string>
    <string name="notifications">Уведомления</string>
    <string name="dark_theme">Темная тема</string>
    <string name="logout">Выйти из профиля</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="gender">Ваш пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="birthday">День рождения</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="select_value">Выберите значение</string>
    <string name="select_date">Выберите дату</string>
    <string name="devices_not_found">Устройства не найдены</string>
    <string name="connect_your_device">Подключите устройство, чтобы начать\nиспользовать его функции</string>
    <string name="add_devices">Добавить устройство</string>
    <string name="version">Версия 1.10, сборка 132456</string>
    <string name="license_agreement">Лицензионное соглашение</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="company">Проект компании ЗОЖ\n© 2025 ЗОЖ</string>
    <string name="entrance">Вход</string>
    <string name="change_password">Изменить пароль</string>
    <string name="support_email">drobitkoivan@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам приложения SupportHealth</string>
    <string name="support_text">Спасибо разработчикам за крутое приложение!</string>
    <string name="eaten">Съедено</string>
    <string name="add_one_more_food">Добавить еще еды</string>
    <string name="mobility">Подвижность</string>
    <string-array name="mobility_array">
        <item>Легкая активность</item>
        <item>Средняя активность</item>
        <item>Высокая активность</item>
    </string-array>
    <string name="light_activity">Легкая активность</string>
    <string name="average_activity">Средняя активность</string>
    <string name="high_activity">Высокая активность</string>
    <string-array name="target_array">
        <item>Сбросить вес</item>
        <item>Удержать вес</item>
        <item>Нарастить мышцы</item>
    </string-array>
    <string name="lose_weight">Сбросить вес</string>
    <string name="maintain_weight">Удержать вес</string>
    <string name="build_muscle">Нарастить мышцы</string>
    <string name="select_mobility">Выберите подвижность</string>
    <string name="select_target">Выберите цель</string>
    <string name="hello">Добро пожаловать\nв SupportHealth</string>
    <string name="info_hello">Комплексная забота о здоровье\nв одном приложении</string>
    <string name="enter_your_details">Введите свои данные</string>
    <string name="go_on">Продолжить</string>
    <string name="go_to_application">Перейти к приложению</string>
    <string name="search_not_found">Ничего не нашлось</string>
    <string name="internet_error">Проблемы со связью</string>
    <string name="update">Обновить</string>
    <string name="internet_error_explanation">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="a_hundred_grams">— 100 г</string>
    <string name="clear_history">Очистить историю</string>
    <string name="your_history_is_empty">Ваша история пуста</string>
    <string name="not_enough">Недостаточно</string>
    <string name="fine">Хорошо</string>
    <string name="great">Отлично</string>
    <string name="excess">Избыток</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="login">Вход</string>
    <string name="sing_up">Регистрация</string>
    <string name="login_info">Пожалуйста, авторизуйтесь\nчтобы пользоваться приложением</string>
    <string name="sing_up_info">Пожалуйста, заполните поля\nи создайте аккаунт</string>
    <string name="email">Email</string>
    <string name="email_hint">ivanivanovich@yandex.ru</string>
    <string name="password">Пароль</string>
    <string name="password_hint">q34fk31gk4!</string>
    <string name="enter">Войти</string>
    <string name="check_in">Зарегистрироваться</string>
    <string name="dont_have_an_account">Еще нет аккаунта?</string>
    <string name="have_an_account">Уже есть аккаунт?</string>
    <string name="assistant">Ассистент</string>
    <string name="chat_hint">Что у вас нового? Еда, шаги, цели — всё учтём</string>
    <string name="ok">Ок</string>
    <string name="cancel">Отмена</string>
    <string name="general_info">Общая информация</string>
    <string name="distant">Расстояние</string>
    <string name="time">Время</string>
    <string name="floors">Этажи</string>
    <string name="statistic">Статистика</string>
    <string name="today">за сегодня,</string>
    <string name="target_separator">цель —</string>
    <string name="dynamics">Динамика</string>
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>
    <string name="sunday">Вс</string>
    <string name="target_complete">выполнение цели</string>
    <string name="eating_add">Прием пищи добавлен!</string>
    <string name="repeat_request">Повторите запрос!</string>
    <string name="bad_request">Неверный запрос!</string>
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="error_grams_zero">Нулевой вес!</string>
    <string name="error_required">Заполните поле!</string>
    <string name="nutrient_distribution">Распределение нутриентов</string>
    <string name="calorie_distribution_by_day">Распределение калорий по дню</string>
    <string name="calorie_intake">Потребление калорий</string>
    <string name="water_intake">Потребление воды</string>
    <string name="average_value">Среднее значение</string>
    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="error_min_steps">Минимум %1$d шагов</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="separator">/</string>
    <string name="how_feel">Как самочувствие?</string>
    <string name="mood_default_text">Нормальное</string>
    <string name="mood_label">Настроение</string>
    <string name="energy_label">Энергия</string>
    <string name="note_hint">Заметки</string>
    <string name="events">События</string>
    <string name="emotions">Эмоции</string>
    <string name="notes">Заметки</string>
    <string name="mood_circle_desc">Круг настроения</string>
    <string name="mood_slider">Слайдер настроения</string>
    <string name="energy_slider">Слайдер энергии</string>
    <string name="mon">Пн</string>
    <string name="tue">Вт</string>
    <string name="wed">Ср</string>
    <string name="thu">Чт</string>
    <string name="fri">Пт</string>
    <string name="sat">Сб</string>
    <string name="sun">Вс</string>
    <string name="mood_emoji">Смайлик настроения</string>
    <string name="energy_label_title">Энергия</string>
    <string name="back">Назад</string>
    <string name="habits">Привычки</string>
    <string name="mood_night">Настроение ночью</string>
    <string name="mood_morning">Настроение утром</string>
    <string name="mood_day">Настроение днем</string>
    <string name="mood_evening">Настроение вечером</string>
    <string name="night">Ночь</string>
    <string name="morning">Утро</string>
    <string name="evening">Вечер</string>
    <string name="all_time">Все время</string>
    <string name="add_habits">Добавить привычку</string>
    <string name="current_target">Текущая цель</string>
    <string name="attempt">Попытка</string>
    <string name="record">Рекорд</string>
    <string name="name_habit">Название вредной привычки</string>
    <string name="start_date">Дата начала</string>
    <string name="start_over">Начать заново</string>
</resources>