<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/margin_padding_16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".welcome.singup.ui.SingUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/title_sing_up"
            android:layout_width="@dimen/margin_padding_0dp"
            android:layout_height="wrap_content"
            style="@style/TitleTextStyle"
            android:text="@string/sing_up"
            android:textColor="?attr/colorOnPrimaryFixed"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/info_login"
            android:layout_width="@dimen/margin_padding_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_8dp"
            style="@style/RegularTextStyle"
            android:text="@string/sing_up_info"
            android:textColor="?attr/colorOnPrimaryFixed"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_sing_up"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/title_email"
            style="@style/RegularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_16dp"
            android:text="@string/email"
            android:textColor="?attr/colorOnSecondaryFixed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_login" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:padding="@dimen/margin_padding_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_email">

            <EditText
                android:id="@+id/email_edit_text"
                style="@style/RegularTextStyle"
                android:layout_width="@dimen/margin_padding_0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="?attr/colorOnPrimaryFixed"
                android:textColorHint="?attr/colorOnSecondaryFixed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/title_password"
            style="@style/RegularTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_16dp"
            android:text="@string/password"
            android:textColor="?attr/colorOnSecondaryFixed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:padding="@dimen/margin_padding_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_password">

            <EditText
                android:id="@+id/password_edit_text"
                style="@style/RegularTextStyle"
                android:layout_width="@dimen/margin_padding_0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="?attr/colorOnPrimaryFixed"
                android:textColorHint="?attr/colorOnSecondaryFixed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_check_in"
            style="@style/AddButtonStyle"
            android:layout_width="@dimen/margin_padding_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_32dp"
            android:backgroundTint="@color/iced_pink_rose"
            android:text="@string/check_in"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_check_in">

            <TextView
                android:id="@+id/have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_padding_8dp"
                style="@style/RegularTextStyle"
                android:text="@string/have_an_account"
                android:textColor="?attr/colorOnPrimaryFixed"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="@id/login"/>

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/RegularTextStyle"
                android:text="@string/login"
                android:clickable="true"
                android:textColor="@color/iced_pink_rose"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>