<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/error"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp">

    <ImageView
        android:id="@+id/img_error"
        android:layout_width="171dp"
        android:layout_height="171dp"
        android:src="@drawable/ic_mood_bad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_error"
        style="@style/BoldTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_8dp"
        android:gravity="center"
        android:textColor="?attr/colorOnPrimaryFixed"
        android:textSize="@dimen/text_size_22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_error"
        tools:text="@string/devices_not_found" />

    <TextView
        android:id="@+id/description_error"
        style="@style/RegularTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_8dp"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="?attr/colorOnPrimaryFixed"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_error"
        tools:text="@string/connect_your_device" />

    <Button
        android:id="@+id/error_button"
        style="@style/AddButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_16dp"
        android:backgroundTint="@color/iced_pink_rose"
        android:text="@string/update"
        app:layout_constraintTop_toBottomOf="@id/description_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>